--- a/index.html
+++ b/index.html
@@ -3,10 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Github</title>
 </head>
 <body>
+
+    <div class="container">
+
+    <!--navBar-->
+
+        <nav>
+            <div class="navbar__container">
+                <div class="left__items">
+                    <div class="navbar__logo">
+                        <a href="/"><i class="fab fa-github" style="color: #fff;"></i></a>
+                    </div>
+                    
+                    <ul class="navbar__menu">
+                        <li><a class="navbar__links" href="#">Why Github ?</a></li>
+                        <li><a class="navbar__links" href="#">Team</a></li>
+                        <li><a class="navbar__links" href="#">Entreprise</a></li>
+                        <li><a class="navbar__links" href="#">Explore</a></li>
+                        <li><a class="navbar__links" href="#">Marketplace</a></li>
+                        <li><a class="navbar__links" href="#">Pricing</a></li>
+                    </ul>
+                </div>
+                <div class="right__items">
+                    <div class="navbar__search">
+                        <input type="text">
+                    </div>
+                    <div class="navbar__sign">
+                        <ul class="navbar__menu">
+                            <li><a href="#" class="navbar__links">Sign in</a></li>
+                            <li><a href="#" class="navbar__links">Sign up</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </nav>
+    
+    <h1>Hello word</h1>
+    </div>
+
+
+    <script src="https://kit.fontawesome.com/aa67defed4.js" crossorigin="anonymous"></script>
     <script src="./js/app.js"></script>
 </body>
 </html>
