--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.0.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <link rel="stylesheet" href="./css/style.css">
@@ -10,80 +11,44 @@
 </head>
 <body>
 
-    <div class="container">
-
-    <!--navBar-->
-
-    <nav>
-        <div class="logo__burger">
-        <a href="#"><i id="mobile__logo" class="fab fa-github navbar__logo" style="color: #fff;"></i></a>
-        <div class="burger">
-            <div class="line1"></div>
-            <div class="line2"></div>
-            <div class="line3"></div>
-        </div>
-        </div>
-        <div class="left__items">
-            <a href="#"><i id="desktop__logo" class="fab fa-github navbar__logo" style="color: #fff;"></i></a>
-            <ul class="navbar__menu">
-                <i class="close__btn fas fa-times"></i>
-                <li><a class="navbar__links" href="#">Why Github ? <i class="fas fa-caret-down"></i></a></li>
-                <li><a class="navbar__links" href="#">Team</a></li>
-                <li><a class="navbar__links" href="#">Entreprise</a></li>
-                <li><a class="navbar__links" href="#">Explore <i class="fas fa-caret-down"></i></a></li>
-                <li><a class="navbar__links" href="#">Marketplace</a></li>
-                <li><a class="navbar__links" href="#">Pricing <i class="fas fa-caret-down"></i></a></li>
-            </ul>
-        </div>  
-        <div class="right__items">
-            <div class="navbar__search">
-                <input class="search" type="text" value="Search Github" onclick="search()">
-            </div>
-            <div class="navbar__sign">
-                <ul class="sign">
-                    <li><a href="#" class="navbar__links" id="sign_in">Sign in</a></li>
-                    <li><a href="#" class="navbar__links" id="sign_up">Sign up</a></li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Navbar</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
-            </div> 
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+              </li>
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
         </div>
-    </nav>
-    
+      </nav>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
-        <!--<nav>
-            <div class="navbar__container">
-                <div class="left_items">
-                    <a href="/"><i class="fab fa-github navbar__logo" style="color: #fff;"></i></a>
-                    <ul class="navbar__menu">
-                        <li><a class="navbar__links" href="#">Why Github ? <i class="fas fa-caret-down"></i></a></li>
-                        <li><a class="navbar__links" href="#">Team</a></li>
-                        <li><a class="navbar__links" href="#">Entreprise</a></li>
-                        <li><a class="navbar__links" href="#">Explore <i class="fas fa-caret-down"></i></a></li>
-                        <li><a class="navbar__links" href="#">Marketplace</a></li>
-                        <li><a class="navbar__links" href="#">Pricing <i class="fas fa-caret-down"></i></a></li>
-                    </ul>
-                </div>
-                <div class="right__items">
-                    <div class="navbar__search">
-                        <input class="search" type="text" value="Search Github" onclick="search()">
-                    </div>
-                    <div class="navbar__sign">
-                        <ul class="sign navbar__menu">
-                            <li><a href="#" class="navbar__links">Sign in</a></li>
-                            <li><a href="#" class="navbar__links" id="sign_up">Sign up</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </nav> -->
-    
-        <h1>Hello word</h1>
-    </div>
-
-    <script>
-        $('.icon').click(function(){
-          $('span').toggleClass("cancel");
-        });
-      </script>
     <script src="https://kit.fontawesome.com/aa67defed4.js" crossorigin="anonymous"></script>
     <script src="./js/app.js"></script>
 </body>
