--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Deezer</title>
 </head>
 <body>
+  <!--navbar-->
 
     <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-xl">
@@ -36,7 +37,27 @@
             </ul>
           </div>
         </div>
-      </nav>
+    </nav>
+
+    <!--home container-->
+
+    <div class="container-fluid">
+      <div class="row first">
+          <div class="land__text col-lg offset-lg-1 col-12">
+            <h1 id="bring">You bring the passion.<br>We bring the music.</h1>
+            <h2 id="try">Try Deezer Premium free for 30 days*</h2>
+            <div class="row btns">
+              <button class="premium col-lg-5">Deezer premium</button>
+              <button class="free offset-lg-1 col-lg-5">Deezer free</button>
+            </div>
+          </div>
+          <div class="albums offset-lg-1 col-lg-6 col-12">
+            <img class="img-fluid" src="./img/landing.png" alt="">
+          </div>
+      </div>
+    </div>
+
+  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
     <script src="https://kit.fontawesome.com/aa67defed4.js" crossorigin="anonymous"></script>
