finishing the first container

--- a/index.html
+++ b/index.html
@@ -42,16 +42,18 @@
     <!--home container-->
 
     <div class="container-fluid">
-      <div class="row first">
-          <div class="land__text col-lg offset-lg-1 col-12">
-            <h1 id="bring">You bring the passion.<br>We bring the music.</h1>
-            <h2 id="try">Try Deezer Premium free for 30 days*</h2>
-            <div class="row btns">
-              <button class="premium col-lg-5">Deezer premium</button>
-              <button class="free offset-lg-1 col-lg-5">Deezer free</button>
+      <div class="d-flex flex-column flex-lg-row justify-content-between first">
+          <div class="land__text offset-lg-1">
+            <div class="text d-flex flex-column align-items-center align-items-lg-start">
+            <h1 class="text-center text-lg-start" id="bring">You bring the passion.<br>We bring the music.</h1>
+            <h2 class="fs-3 fs-lg-2 text-center text-lg-start" id="try">Try Deezer Premium free for 30 days*</h2>
+            </div>
+            <div class="btns mt-lg-5 d-flex flex-column align-items-center flex-lg-row justify-content-lg-between">
+              <button class="premium grow-on-hover">Deezer premium</button>
+              <button class="free grow-on-hover">Deezer free</button>
             </div>
           </div>
-          <div class="albums offset-lg-1 col-lg-6 col-12">
+          <div class="albums align-self-end">
             <img class="img-fluid" src="./img/landing.png" alt="">
           </div>
       </div>
