second container (phone)

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         </div>
     </nav>
 
-    <!--home container-->
+    <!--home first container-->
 
-    <div class="container-fluid">
-      <div class="d-flex flex-column flex-lg-row justify-content-between first">
+    <div class="container-fluid first">
+      <div class="d-flex flex-column flex-lg-row justify-content-between">
           <div class="land__text offset-lg-1">
             <div class="text d-flex flex-column align-items-center align-items-lg-start">
             <h1 class="text-center text-lg-start" id="bring">You bring the passion.<br>We bring the music.</h1>
@@ -56,6 +56,39 @@
           <div class="albums align-self-end">
             <img class="img-fluid" src="./img/landing.png" alt="">
           </div>
+      </div>
+    </div>
+
+    <!--Second container (phone)-->
+
+    <div class="container-fluid second">
+      <div class="row justify-content-sm-between container-xl">
+        <div class="phone col-lg-3 d-none d-lg-block">
+          <img src="./img/Apple_announces-apple-music-radio_08182020_inline.jpg.large.jpg" style="width: 500px ; height: 670px;" alt="">
+        </div>
+        <div class="why__deezer col-lg-6">
+          <h1 class="text-center">Why Deezer ?</h1>
+          <div class="row align-items-center">
+            <div class="txt col-sm-6 col-12">
+              <h4>A world of music in your pocket.</h4>
+              <p>Find new loves and old favourites from over 56 million tracks.</p>
+            </div>
+            <div class="txt col-sm-6 col-12">
+              <h4>No WiFi? No problem.</h4>
+              <p>With Deezer Premium, you don't need to be connected to enjoy your favourite tracks.</p>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div class="txt col-sm-6 col-12">
+              <h4>Craft your collection.</h4>
+              <p>Create playlists from millions of tracks and take them with you wherever you go.</p>
+            </div>
+            <div class="txt col-sm-6 col-12">
+              <h4>Made for you.</h4>
+              <p>Flow gets to know what you like and what you don't. Discover your personal soundtrack.</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
