third container (devices)

--- a/index.html
+++ b/index.html
@@ -71,21 +71,21 @@
         <div class="why__deezer offset-lg-1 col-lg">
           <h1>Why Deezer ?</h1>
           <div class="row">
-            <div class="txt col-sm-6 col-12">
+            <div class="txt col-md-5 col-12">
               <h4>A world of music in your pocket.</h4>
               <p>Find new loves and old favourites from over 56 million tracks.</p>
             </div>
-            <div class="txt col-sm-6 col-12">
+            <div class="txt col-md-5 offset-md-1 col-12">
               <h4>No WiFi? No problem.</h4>
               <p>With Deezer Premium, you don't need to be connected to enjoy your favourite tracks.</p>
             </div>
           </div>
           <div class="row">
-            <div class="txt col-sm-6 col-12">
+            <div class="txt col-md-5 col-12">
               <h4>Craft your collection.</h4>
               <p>Create playlists from millions of tracks and take them with you wherever you go.</p>
             </div>
-            <div class="txt col-sm-6 col-12">
+            <div class="txt col-md-5 offset-md-1 col-12">
               <h4>Made for you.</h4>
               <p>Flow gets to know what you like and what you don't. Discover your personal soundtrack.</p>
             </div>
@@ -96,9 +96,9 @@
 
     <!--Third container-->
 
-    <div class="container-fluid third">
-      <div class="row">
-        <div class="devices col-12 col-lg-6">
+    <div class="container-fluid third row align-items-center">
+      <div class="row container align-items-center">
+        <div class="d-flex devices col-12 col-lg-6 order-last order-lg-first justify-content-evenly">
           <span class="material-icons">
             laptop
           </span>
@@ -118,9 +118,9 @@
             directions_car
           </span>
         </div>
-        <div class="always__txt col-12 col-lg-6">
-          <h1>Always with you</h1>
-          <p>
+        <div class="row always__txt col-12 col-lg-6 align-items-center">
+          <h1 class="text-center text-lg-start">Always with you</h1>
+          <p class="text-center text-lg-start">
             Download your music and take it from your morning run to dinner out with Deezer Premium.
              Available on all your devices, all the time, even without WiFi or 4G.
           </p>
