Implementing the fourth container (offers)

--- a/index.html
+++ b/index.html
@@ -98,23 +98,23 @@
 
     <div class="container-fluid third row align-items-center">
       <div class="row container align-items-center">
-        <div class="d-flex devices col-12 col-lg-6 order-last order-lg-first justify-content-evenly">
-          <span class="material-icons">
+        <div class="d-flex col-12 col-lg-6 order-last order-lg-first justify-content-evenly">
+          <span class="material-icons devices">
             laptop
           </span>
-          <span class="material-icons">
+          <span class="material-icons devices">
             devices
           </span>
-          <span class="material-icons">
+          <span class="material-icons devices">
             watch
           </span>
-          <span class="material-icons">
+          <span class="material-icons devices">
             speaker
           </span>
-          <span class="material-icons">
+          <span class="material-icons devices">
             personal_video
           </span>
-          <span class="material-icons">
+          <span class="material-icons devices">
             directions_car
           </span>
         </div>
@@ -124,6 +124,145 @@
             Download your music and take it from your morning run to dinner out with Deezer Premium.
              Available on all your devices, all the time, even without WiFi or 4G.
           </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid fourth">
+      <div class="container">
+        <h1 class="text-center">Get your music</h1>
+        <div class="d-flex justify-content-center flex-column align-items-center flex-md-row offers__container">
+          <div class="offers">
+            <h2 class="text-center">Deezer free</h2>
+            <h1 class="text-center">DZD 000.00</h1>
+            <p class="text-center">/month</p>
+            <ul class="features">
+              <li class="check">
+                <span class="material-icons">
+                  check
+                </span>
+                56 million tracks
+              </li>
+              <li class="check">
+                <span class="material-icons">
+                  check
+                </span>
+                56 million tracks
+              </li>
+              <li>
+                <span class="material-icons">
+                  close
+                </span>
+                56 million tracks
+              </li>
+              <li>
+                <span class="material-icons">
+                  close
+                </span>
+                56 million tracks
+              </li>
+              <li>
+                <span class="material-icons">
+                  close
+                </span>
+                56 million tracks
+              </li>
+              <li>
+                <span class="material-icons">
+                  close
+                </span>
+                56 million tracks
+              </li>
+            </ul>
+            <div class="d-flex flex-column align-items-center">
+              <button>Sign up</button>
+              <a href="#">more info</a>
+            </div>
+          </div>
+          <div class="offers">
+            <h2 class="text-center">Deezer free</h2>
+            <h1 class="text-center">DZD 000.00</h1>
+            <p class="text-center">/month</p>
+            <ul class="features">
+              <li>
+                <span class="material-icons">
+                  check
+                </span>
+                56 million tracks
+              </li>
+              <li>
+                <span class="material-icons">
+                  check
+                </span>
+                56 million tracks
+              </li>
+              <li>
+                <span class="material-icons">
+                  check
+                </span>
+                56 million tracks
+              </li>
+              <li>
+                <span class="material-icons">
+                  check
+                </span>
+                56 million tracks
+              </li>
+              <li>
+                <span class="material-icons">
+                  close
+                </span>
+                56 million tracks
+              </li>
+            </ul>
+            <div class="d-flex flex-column align-items-center">
+              <p>1 month free</p>
+              <button>Sign up</button>
+              <a href="#">more info</a>
+            </div>
+          </div>
+          <div class="offers">
+            <h2 class="text-center">Deezer free</h2>
+            <h1 class="text-center">DZD 000.00</h1>
+            <p class="text-center">/month</p>
+            <ul class="features">
+              <li class="check">
+                <span class="material-icons">
+                  check
+                </span>
+                56 million tracks
+              </li>
+              <li class="check">
+                <span class="material-icons">
+                  check
+                </span>
+                56 million tracks
+              </li>
+              <li class="check">
+                <span class="material-icons">
+                  check
+                </span>
+                56 million tracks
+              </li>
+              <li class="check">
+                <span class="material-icons">
+                  check
+                </span>
+                56 million tracks
+              </li>
+              <li class="check">
+                <span class="material-icons">
+                  check
+                </span>
+                56 million tracks
+              </li>
+            </ul>
+            <div class="d-flex flex-column align-items-center">
+              <p>1 month free</p>
+              <button>Sign up</button>
+              <a href="#">more info</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
