Finishing the fourth container(offers)

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
     </div>
 
-    <!--Third container-->
+    <!--Third container (devices)-->
 
     <div class="container-fluid third row align-items-center">
       <div class="row container align-items-center">
@@ -128,12 +128,14 @@
       </div>
     </div>
 
+    <!--Fourth container (offers) -->
+
     <div class="container-fluid fourth">
-      <div class="container">
+      <div class="container-xxl">
         <h1 class="text-center">Get your music</h1>
         <div class="d-flex justify-content-center flex-column align-items-center flex-md-row offers__container">
           <div class="offers">
-            <h2 class="text-center">Deezer free</h2>
+            <h2 class="text-center">Deezer<br>Free</h2>
             <h1 class="text-center">DZD 000.00</h1>
             <p class="text-center">/month</p>
             <ul class="features">
@@ -147,83 +149,83 @@
                 <span class="material-icons">
                   check
                 </span>
-                56 million tracks
+                Shuffle Play
               </li>
-              <li>
+              <li class="disabled">
                 <span class="material-icons">
                   close
                 </span>
-                56 million tracks
+                No ads
               </li>
-              <li>
+              <li class="disabled">
                 <span class="material-icons">
                   close
                 </span>
-                56 million tracks
+                Get unlimited skips
               </li>
-              <li>
+              <li class="disabled">
                 <span class="material-icons">
                   close
                 </span>
-                56 million tracks
+                Offline mode
               </li>
-              <li>
+              <li class="disabled">
                 <span class="material-icons">
                   close
                 </span>
-                56 million tracks
+                6 accounts
               </li>
             </ul>
-            <div class="d-flex flex-column align-items-center">
-              <button>Sign up</button>
-              <a href="#">more info</a>
+            <div class="end__offer d-flex flex-column align-items-center">
+              <button class="offer__btn sign grow-on-hover">Sign up</button>
+              <a href="/">More info</a>
+            </div>
+          </div>
+          <div class="offers" id="blue_offer">
+            <h2 class="text-center">Deezer<br>Premium</h2>
+            <h1 class="text-center">DZD 539.00</h1>
+            <p class="text-center">/month</p>
+            <ul class="features">
+              <li>
+                <span class="material-icons">
+                  check
+                </span>
+                56 million tracks
+              </li>
+              <li>
+                <span class="material-icons">
+                  check
+                </span>
+                No ads
+              </li>
+              <li>
+                <span class="material-icons">
+                  check
+                </span>
+                Get unlimited skips
+              </li>
+              <li>
+                <span class="material-icons">
+                  check
+                </span>
+                Offline mode
+              </li>
+              <li class="disabled">
+                <span class="material-icons">
+                  close
+                </span>
+                6 accounts
+              </li>
+            </ul>
+            <div class="end__offer d-flex flex-column align-items-center">
+              <p>30 days free</p>
+              <button class="offer__btn try grow-on-hover">Try it now</button>
+              <a href="/">More info</a>
             </div>
           </div>
           <div class="offers">
-            <h2 class="text-center">Deezer free</h2>
-            <h1 class="text-center">DZD 000.00</h1>
-            <p class="text-center">/month</p>
-            <ul class="features">
-              <li>
-                <span class="material-icons">
-                  check
-                </span>
-                56 million tracks
-              </li>
-              <li>
-                <span class="material-icons">
-                  check
-                </span>
-                56 million tracks
-              </li>
-              <li>
-                <span class="material-icons">
-                  check
-                </span>
-                56 million tracks
-              </li>
-              <li>
-                <span class="material-icons">
-                  check
-                </span>
-                56 million tracks
-              </li>
-              <li>
-                <span class="material-icons">
-                  close
-                </span>
-                56 million tracks
-              </li>
-            </ul>
-            <div class="d-flex flex-column align-items-center">
-              <p>1 month free</p>
-              <button>Sign up</button>
-              <a href="#">more info</a>
-            </div>
-          </div>
-          <div class="offers">
-            <h2 class="text-center">Deezer free</h2>
-            <h1 class="text-center">DZD 000.00</h1>
+            <h2 class="text-center">Deezer<br>Family</h2>
+            <h1 class="text-center">DZD 808.50</h1>
             <p class="text-center">/month</p>
             <ul class="features">
               <li class="check">
@@ -236,31 +238,31 @@
                 <span class="material-icons">
                   check
                 </span>
-                56 million tracks
+                No ads
               </li>
               <li class="check">
                 <span class="material-icons">
                   check
                 </span>
-                56 million tracks
+                Get unlimited skips
               </li>
               <li class="check">
                 <span class="material-icons">
                   check
                 </span>
-                56 million tracks
+                Offline mode
               </li>
               <li class="check">
                 <span class="material-icons">
                   check
                 </span>
-                56 million tracks
+                6 accounts
               </li>
             </ul>
-            <div class="d-flex flex-column align-items-center">
+            <div class="end__offer d-flex flex-column align-items-center">
               <p>1 month free</p>
-              <button>Sign up</button>
-              <a href="#">more info</a>
+              <button class="offer__btn try grow-on-hover">Try it now</button>
+              <a href="/">More info</a>
             </div>
           </div>
         </div>
