Fifth container (last)

--- a/index.html
+++ b/index.html
@@ -269,6 +269,38 @@
       </div>
     </div>
 
+    <!--Fifth container (plans) -->
+
+    <div class="fifth">
+      <div class="annual container-fluid d-flex flex-column flex-xl-row justify-content-between align-items-center">
+        <div class="fifth__txt">
+          <h2 class="text-center text-xl-start">Annual Plan</h2>
+          <p class="d-none d-md-block text-center text-xl-start">
+            Get a year of Deezer Premium for DZD 5 390.00 instead of DZD 6 468.00.
+            Subscribe
+          </p>
+        </div>
+        <div>
+          <button class="fifth__btns">Subscribe</button>
+        </div>
+      </div>
+      <div class="container-fluid d-flex flex-column flex-xl-row justify-content-between align-items-center">
+        <div class="fifth__txt">
+          <h2 class="text-center text-xl-start">Deezer HiFi</h2>
+          <p class="d-none d-md-block text-center text-xl-start"> 
+            Stream in lossless quality for DZD 808.50/month, 1 month free
+          </p>
+        </div>
+        <div>
+          <button class="fifth__btns">Learn more</button>
+        </div>
+      </div>
+    </div>
+
+    <!--Footer-->
+
+    <footer>hello world</footer>
+
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
