--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
           <div class="offers">
             <h2 class="text-center">Deezer<br>Free</h2>
             <h1 class="text-center">DZD 000.00</h1>
-            <p class="text-center">/month</p>
+            <p class="text-center">/month</p><div class="container-fluid footer">
+        
+            </div>
             <ul class="features">
               <li class="check">
                 <span class="material-icons">
@@ -299,7 +301,51 @@
 
     <!--Footer-->
 
-    <footer>hello world</footer>
+    <footer>
+      <div class="container-lg d-flex flex-column flex-md-row justify-content-around align-items-md-center">
+        <div class="container logos d-flex flex-column align-items-center align-items-md-start">
+          <a href="#"><img class="footer__logo" src="./img/deezer_logo_white.png" alt=""></a>
+          <div class="d-flex  social justify-content-between">
+            <button><i class="fab fa-facebook-f"></i></button>
+            <button><i class="fab fa-instagram"></i></button>
+            <button><i class="fab fa-twitter"></i></button>
+            <button><i class="fab fa-youtube"></i></button>
+          </div>
+        </div>
+        <div class="footer__txt d-flex flex-column flex-md-row justify-content-start justify-content-md-between flex-nowrap">
+          <div class="txt__elem">
+            <p class="footer__titles">DEEZER</p>
+            <p><a href="#" class="footer__links">Plans</a></p>
+            <p><a href="#" class="footer__links">Features</a></p>
+            <p><a href="#" class="footer__links">Devices</a></p>
+            <p><a href="#" class="footer__links">Help</a></p>
+            <p><a href="#" class="footer__links">About us</a></p>
+            <p><a href="#" class="footer__links">Careers</a></p>
+          </div>
+          <div class="txt__elem">
+            <p class="footer__titles">EXPLORE</p>
+            <p><a href="#" class="footer__links">All Channels</a></p>
+            <p><a href="#" class="footer__links">Charts</a></p>
+            <p><a href="#" class="footer__links">Most Popular release</a></p>
+            <p><a href="#" class="footer__links">New Releases</a></p>
+            <p><a href="#" class="footer__links">Stay at home</a></p>
+          </div>
+          <div class="txt__elem">
+            <p class="footer__titles">WHO ARE WE?</p>
+            <p><a href="#" class="footer__links">Labels & artists</a></p>
+            <p><a href="#" class="footer__links">Developers</a></p>
+            <p><a href="#" class="footer__links">Press</a></p>
+          </div>
+          <div class="txt__elem">
+            <p class="footer__titles">LEGAL</p>
+            <p><a href="#" class="footer__links">Legal Notice</a></p>
+            <p><a href="#" class="footer__links">Terms and Conditions of use</a></p>
+            <p><a href="#" class="footer__links">Privacy policy</a></p>
+            <p><a href="#" class="footer__links">Cookies</a></p>
+          </div>
+        </div>
+      </div>
+    </footer>
 
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
