make the footer responsive

--- a/index.html
+++ b/index.html
@@ -314,7 +314,11 @@
         </div>
         <div class="footer__txt d-flex flex-column flex-md-row justify-content-start justify-content-md-between flex-nowrap">
           <div class="txt__elem">
-            <p class="footer__titles">DEEZER</p>
+            <div class="d-flex justify-content-between">
+              <p class="footer__titles">DEEZER</p>
+              <i class="fas fa-plus d-block d-md-none"></i>
+              <i class="fas fa-minus d-none"></i>
+            </div>
             <p><a href="#" class="footer__links">Plans</a></p>
             <p><a href="#" class="footer__links">Features</a></p>
             <p><a href="#" class="footer__links">Devices</a></p>
@@ -323,7 +327,11 @@
             <p><a href="#" class="footer__links">Careers</a></p>
           </div>
           <div class="txt__elem">
-            <p class="footer__titles">EXPLORE</p>
+            <div class="d-flex justify-content-between">
+              <p class="footer__titles">EXPLORE</p>
+              <i class="fas fa-plus d-block d-md-none"></i>
+              <i class="fas fa-minus d-none d-md-none"></i>
+            </div>
             <p><a href="#" class="footer__links">All Channels</a></p>
             <p><a href="#" class="footer__links">Charts</a></p>
             <p><a href="#" class="footer__links">Most Popular release</a></p>
@@ -331,13 +339,21 @@
             <p><a href="#" class="footer__links">Stay at home</a></p>
           </div>
           <div class="txt__elem">
-            <p class="footer__titles">WHO ARE WE?</p>
+            <div class="d-flex justify-content-between">
+              <p class="footer__titles">WHO WE ARE?</p>
+              <i class="fas fa-plus d-block d-md-none"></i>
+              <i class="fas fa-minus d-none d-md-none"></i>
+            </div>
             <p><a href="#" class="footer__links">Labels & artists</a></p>
             <p><a href="#" class="footer__links">Developers</a></p>
             <p><a href="#" class="footer__links">Press</a></p>
           </div>
           <div class="txt__elem">
-            <p class="footer__titles">LEGAL</p>
+            <div class="d-flex justify-content-between">
+              <p class="footer__titles">LEGAL</p>
+              <i class="fas fa-plus d-block d-md-none"></i>
+              <i class="fas fa-minus d-none d-md-none"></i>
+            </div>
             <p><a href="#" class="footer__links">Legal Notice</a></p>
             <p><a href="#" class="footer__links">Terms and Conditions of use</a></p>
             <p><a href="#" class="footer__links">Privacy policy</a></p>
